Vi henter allerede innvilgelsesresultat fra backend, så legger logikken for når OPPHØRT er tilgjengelig her. Skriver tester