@@ -1,13 +1,9 @@
 package no.nav.melosys.tjenester.gui.kodeverk;
 
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.Stream;
 
+import io.getunleash.Unleash;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import no.nav.melosys.domain.kodeverk.InnvilgelsesResultat;
@@ -18,12 +14,15 @@ import no.nav.melosys.domain.kodeverk.begrunnelser.folketrygdloven.Ftrl_2_8_foru
 import no.nav.melosys.domain.kodeverk.begrunnelser.folketrygdloven.Ftrl_2_8_naer_tilknytning_norge_begrunnelser;
 import no.nav.melosys.domain.kodeverk.begrunnelser.folketrygdloven.Medfolgende_barn_begrunnelser_ftrl;
 import no.nav.melosys.domain.kodeverk.begrunnelser.folketrygdloven.Medfolgende_ektefelle_samboer_begrunnelser_ftrl;
+import no.nav.melosys.featuretoggle.ToggleName;
+import no.nav.melosys.service.behandling.BehandlingService;
 import no.nav.melosys.service.kodeverk.KodeDto;
 import no.nav.melosys.service.medlemskapsperiode.MedlemskapsperiodeService;
 import no.nav.security.token.support.core.api.Protected;
 import org.springframework.context.annotation.Scope;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.WebApplicationContext;
@@ -33,7 +32,7 @@ import static no.nav.melosys.domain.kodeverk.Trygdedekninger.*;
 @Protected
 @RestController
 @RequestMapping("/kodeverk/melosys-internt")
-@Api(tags = { "kodeverk/melosys-internt"})
+@Api(tags = {"kodeverk/melosys-internt"})
 @Scope(value = WebApplicationContext.SCOPE_REQUEST)
 public class MelosysInterntKodeverkTjeneste {
 
@@ -45,22 +44,34 @@ public class MelosysInterntKodeverkTjeneste {
         FTRL_2_9_FØRSTE_LEDD_C_ANDRE_LEDD_HELSE_PENSJON_SYKE_FORELDREPENGER.getKode());
 
     private final MedlemskapsperiodeService medlemskapsperiodeService;
+    private final BehandlingService behandlingService;
+    private final Unleash unleash;
 
-    public MelosysInterntKodeverkTjeneste(MedlemskapsperiodeService medlemskapsperiodeService) {
+    public MelosysInterntKodeverkTjeneste(MedlemskapsperiodeService medlemskapsperiodeService, BehandlingService behandlingService, Unleash unleash) {
         this.medlemskapsperiodeService = medlemskapsperiodeService;
+        this.behandlingService = behandlingService;
+        this.unleash = unleash;
     }
 
-    @GetMapping("/folketrygden")
+    @GetMapping("/folketrygden/{behandlingID}")
     @ApiOperation(value = "Henter koder fra internt kodeverk til saksbehandling av folketrygden-saker")
-    public ResponseEntity<Map<String, Object>> hentKoderTilFolketrygden() {
+    public ResponseEntity<Map<String, Object>> hentKoderTilFolketrygden(@PathVariable("behandlingID") Long behandlingID) {
         Map<String, Object> kodeverdier = new HashMap<>();
         kodeverdier.put(Trygdedekninger.class.getSimpleName(), tilKodeDto(
             medlemskapsperiodeService.hentGyldigeTrygdedekninger(),
             Comparator.comparingInt(c -> definedOrderTrygdedekning.indexOf(c.getKode()))));
         kodeverdier.put(Vilkaar.class.getSimpleName(), tilKodeDto(Vilkaar.values()));
-        kodeverdier.put(InnvilgelsesResultat.class.getSimpleName(), tilKodeDto(InnvilgelsesResultat.values()));
+        kodeverdier.put(InnvilgelsesResultat.class.getSimpleName(), tilKodeDto(filtrerteInnvilgelsesResultat(behandlingID)));
         kodeverdier.put("begrunnelser", lagBegrunnelser());
         return ResponseEntity.ok(kodeverdier);
+    }
+
+    private List<InnvilgelsesResultat> filtrerteInnvilgelsesResultat(Long behandlingID) {
+        return Arrays.stream(InnvilgelsesResultat.values())
+            .filter(kode -> !kode.equals(InnvilgelsesResultat.DELVIS_INNVILGET))
+            .filter(kode -> !kode.equals(InnvilgelsesResultat.OPPHØRT) ||
+                (unleash.isEnabled(ToggleName.SAKSBEHANDLING_MANGLENDE_INNBETALING) && behandlingService.hentBehandling(behandlingID).erManglendeInnbetalingTrygdeavgift()))
+            .toList();
     }
 
     private Map<String, Collection<KodeDto>> lagBegrunnelser() {
@@ -73,7 +84,7 @@ public class MelosysInterntKodeverkTjeneste {
     }
 
     private <T extends Kodeverk> List<KodeDto> tilKodeDto(Collection<T> kodeverk, Comparator<KodeDto> comparator) {
-        return tilKodeDto(kodeverk).stream().sorted(comparator).collect(Collectors.toList());
+        return tilKodeDto(kodeverk).stream().sorted(comparator).toList();
     }
 
     private <T extends Kodeverk> Collection<KodeDto> tilKodeDto(Collection<T> kodeverk) {
@@ -81,6 +92,6 @@ public class MelosysInterntKodeverkTjeneste {
     }
 
     private Collection<KodeDto> tilKodeDto(Kodeverk... kodeverk) {
-        return Stream.of(kodeverk).map(k -> new KodeDto(k.getKode(), k.getBeskrivelse())).collect(Collectors.toList());
+        return Stream.of(kodeverk).map(k -> new KodeDto(k.getKode(), k.getBeskrivelse())).toList();
     }
 }
